Timer/myservice-service.yml
apiVersion: v1
kind: Service
metadata:
  name: timer
spec:
  ports:
    - name: http
      targetPort: 8080
      port: 80
  type: NodePort
  selector:
    app: timer
